force-app/main/default/objects/Laser_Vein_Removal_S__c/Laser_Vein_Removal_S__c.object-meta.xml
<CustomObject>
    <label>Laser Vein Removal(S)</label>
    <nameField>
        <label>Laser Vein Removal(S) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Laser Vein Removal(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>