force-app/main/default/objects/Laser_Vein_Removal_S__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Right Upper</fullName>
            </value>
            <value>
                <fullName>Right Lower</fullName>
            </value>
            <value>
                <fullName>Left Upper</fullName>
            </value>
            <value>
                <fullName>Left Lower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>