force-app/main/default/objects/Laser_Vein_Removal_S__c/fields/Baseline_skintell__c.field-meta.xml
<CustomField>
    <fullName>Baseline_skintell__c</fullName>
    <label>Baseline skintell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>