force-app/main/default/objects/Laser_Vein_Removal_S__c/fields/Ice_Roller_Used__c.field-meta.xml
<CustomField>
    <fullName>Ice_Roller_Used__c</fullName>
    <label>Ice Roller Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>