force-app/main/default/objects/Laser_Vein_Removal_S__c/fields/Jelly_Applied__c.field-meta.xml
<CustomField>
    <fullName>Jelly_Applied__c</fullName>
    <label>Jelly Applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>