force-app/main/default/objects/Laser_Vein_Removal_S__c/fields/Laser_Vein_Removal__c.field-meta.xml
<CustomField>
    <fullName>Laser_Vein_Removal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Laser Vein Removal</label>
    <referenceTo>Laser_Vein_removal__c</referenceTo>
    <relationshipLabel>Laser Vein Removal(S)</relationshipLabel>
    <relationshipName>Laser_Vein_Removal_S</relationshipName>
    <type>Lookup</type>
</CustomField>