force-app/main/default/objects/Laser_Vein_Removal_S__c/fields/ms__c.field-meta.xml
<CustomField>
    <fullName>ms__c</fullName>
    <label>ms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>